fueron creadas las rutas de productos

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
     <nav class="navBar">
         <ul class="menu-items">
             <li class="menu-item">Productos</li>
-            <li class="menu-item cart-menu-item">Carrito</li>
+            <li class="menu-item"> 🛒 <span id="cart-menu-item">0</span> Carrito</li>
             <li class="menu-item">Contacto</li>
         </ul>
     </nav>
