--- a/views/partials/formProduct.ejs
+++ b/views/partials/formProduct.ejs
@@ -19,7 +19,7 @@
             <input id="foto" name="foto" type="text" placeholder="Foto(URL) del producto">
         </div>
         <div class="input-container">
-            <input class="add-product" type="submit" value="Añadir Producto">
+            <input class="btn-add-product" type="submit" value="Añadir Producto">
         </div>
     </form>
 
