--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,9 +1,8 @@
 <header id="header" class="header">
     <nav class="navBar">
         <ul class="menu-items">
-            <li class="menu-item">Productos</li>
-            <li class="menu-item"> 🛒 <span id="cart-menu-item">0</span> Carrito</li>
-            <li class="menu-item">Contacto</li>
+            <li class="menu-item"> <a href="/api/productos"> Productos </a></li>
+            <li class="menu-item"><a href="/api/carrito"> 🛒 <span id="cart-menu-item">0</span> Carrito </a></li>
         </ul>
     </nav>
 </header>
