--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -24,7 +24,7 @@
             <div class="products-container">
                 
                 <% productos.forEach( product => { %>
-                    <div class="product-container">
+                    <div class="product-container"> <a href="/api/productos/<%= product.id %>">
                         <figure class="img-product-container">
                             <img class="img-product" src=<%= product.foto %> alt=<%= product.nombre %> >
                         </figure>
@@ -36,8 +36,7 @@
                         <div class="btn-add-to-cart-container">
                             <button class="btn-add-to-cart">Añadir!</button>
                         </div>
-                    </div>
-
+                    </a></div>
                 <% }) %>
                 
             </div>
