fueron creados algunos metodos de los carritos

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -313,3 +313,7 @@ input[type=text]:focus, input[type=number]:focus{
 .btn-add-product:hover{
     border-radius: 10px;
 }
+.product-container a, .menu-item a {
+    text-decoration: none;
+    color: #fff;
+}
